syntax = "proto3";

package com;
option java_multiple_files = true;

service MailService {
    rpc mandarMail(MandarMailRequest) returns (MandarMailResponse);
    rpc consultarCorreos(ConsultarCorreosRequest) returns (ConsultarCorreosResponse);
}

message MandarMailRequest {
    string titulo = 1;
    string mensaje = 2;
    string remitente = 3;
    repeated string destinatarios = 4; //lista de direcciones de correo de los destinatarios
    bool esFavorito = 5;
    repeated Usuario usuariosGrupo = 6; //usuarios pertenecientes al grupo (si aplica)
}

//defiincin del mensaje de respuesta para confirmar el envío del correo
message MandarMailResponse {
    string status = 1; 
    string detalle = 2; 
}

message Usuario {
    string nombre = 1;
    string apellido = 2;
    string direccionCorreo = 3;
}

message Mail {
    string titulo = 1;
    string mensaje = 2;
    string remitente = 3;
    repeated string destinatario = 4;
    bool esFavorito = 5;
}

//solicitud para consultar correos de un destinatario
message ConsultarCorreosRequest {
    string destinatario = 1; // Dirección de correo del destinatario
}

//respuesta para la consulta de correos
message ConsultarCorreosResponse {
    repeated MandarMailRequest correos = 1; //lista de correos recibidos por el destinatario
}
